<resources>
    <string name="app_name">FindME</string>
    <string name="title_activity_maps">Map</string>
    <string name="logo_name">Find ME</string>
    <string name="slogan_name">We will help you find your way</string>
    <string name="created_by">Created By : Hamza El Anssari - Hamza Gueddi - Zakaria Kabbori</string>

    <string name="first_slide_title">Localize Yourself And Other People</string>
    <string name="second_slide_title">Create And Join \nClasses</string>
    <string name="third_slide_title">Add People To Your Friends List</string>
    <string name="fourth_slide_title">Send And Receive Notifications </string>


    <string name="first_slide_desc">With the help of a map , you can localize yourself and other people in real-time. You can even request to find only your friends or find anyone by his name</string>
    <string name="second_slide_desc">You can create classes and add people by sending an invite code or adding them manually. You can also create custom groups where you can invite your friends or anyone else in a fast easy way.</string>
    <string name="third_slide_desc">With your friend list , you can add anyone you want up to 30 people !! You can send them notifications or messages and request their location.</string>
    <string name="fourth_slide_desc">In our App , you will send and receive notifications easily. This way you will not miss any new events concerning your classes or custom rooms</string>
    <string name="skip_btn">Skip</string>
    <string name="let_get_started">Let\'s Get Started</string>
    <string name="sign_up">Sign Up</string>
    <string name="heading">Begin\nYour Adventure</string>
    <string name="tag_line">Locate Anyone , Create Classes and Add Friends By Signing Up </string>
    <string name="next_btn">NEXT</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How do we work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_fullname">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phonenumber">Phone Number</string>
    <string name="password">Password</string>
    <string name="function">You are a :</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="otp_code">Co\nde</string>
    <string name="otp_verification">Verification</string>
    <string name="otp_description">Enter one time password sent on\n</string>
    <string name="verify_code">Verify Code</string>
    <string name="forgot_password_provider">Provide your Email account to reset your password!</string>
    <string name="forgot_password_selection">Select which contact detail you want to use to reset your password.</string>
    <string name="make_selection">Make\nSelection</string>
    <string name="via_sms">via sms:</string>
    <string name="via_mail">via mail:</string>
    <string name="new_credentials">New\nCredentials</string>
    <string name="new_credentials_detail">Your Identity has been verified!\nSet your new password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ok">Ok</string>
    <string name="password_updated">Password\nUpdated</string>
    <string name="password_updated_success">Your password has been updated successfully!</string>
    <string name="wrong_otp">WRONG!</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_rooms">ALL ROOMS</string>
    <string name="geolocation_map">OPEN GEO MAP</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="groups">Groups</string>
    <string name="class_groups">Class Groups</string>
    <string name="club_groups">Club Groups</string>
    <string name="custom_groups">Custom Groups</string>
    <string name="friends_list">Friends List</string>
    <string name="all_groups">All Groups</string>
    <string name="group_desc">Click on a selected type of group to find all groups</string>
    <string name="create_group">Groups</string>
    <string name="localization">Localization</string>
    <string name="friends">Friends</string>
    <string name="more_details">Please click to find more details!</string>
    <string name="expand_all">EXPAND ALL</string>
    <string name="create_group_selection">Create Group</string>
    <string name="join_group">Join Group</string>
    <string name="selection">Please select your action!</string>
    <string name="group_name">Group Name</string>
    <string name="group_description">Group Description</string>
    <string name="group_type">Group Type : </string>
    <string name="create_group_info">Please fill in the informations below!</string>
    <string name="create_group_invite_info">Please insert an invite code so that other users will be able to join your group!</string>
    <string name="create_group_invite_note">NOTE : The invite code should consist of 8 digits and try to put a hard code to avoid undesirable users!</string>
    <string name="group_created">Group Created</string>
    <string name="group_created_message">Your group has been created successfully!</string>
    <string name="go_to_group">Go to Group</string>
    <string name="email_sent">Email Sent</string>
    <string name="email_sent_info">An email has been sent to</string>
    <string name="email_sent_info_2">Please check your email and follow instructions!</string>
    <string name="go_tologin_screen">Go To Login Screen</string>
    <string name="number_of_friends">Number of Friends:</string>
    <string name="number_of_groups">Number of Groups:</string>
    <string name="status">Status</string>
    <string name="update">Update</string>
    <string name="join_group_info">Please insert your 8 digit invite code to join</string>
    <string name="join">join</string>
    <string name="group_joined">Group Joined</string>
    <string name="join_group_success">You joined the group successfully</string>
    <string name="title_activity_user_localization">Map</string>
    <string name="search_users">Search Users</string>
    <string name="search_here">Search Here</string>
    <string name="go_to_main_menu">Go to Main Menu</string>
    <string name="reject_request">Reject Request</string>
    <string name="type_a_message">Type a message...</string>
    <string name="search_all_users">Search All Users</string>
    <string name="kick_members">Kick Members</string>
    <string name="home_2">Home</string>
    <string name="geolocation">Geolocation</string>
    <string name="add_members">Add Members</string>
    <string name="title_activity_group_geolocation">Map</string>
    <string name="search_groups">Search Groups</string>
    <string name="owner">"Owner : "</string>
    <string name="join_grp">JOIN</string>
    <string name="manage_friends">Manage Friends</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="reject">Reject</string>


</resources>
