<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.Authentication.ForgotPasswordSuccess"
    android:background="@color/white"
    android:padding="30dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_icon"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_sent"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:fontFamily="@font/brandon_grotesque_black"
            android:textAlignment="center"
            android:gravity="center"
            android:textAllCaps="true"
            android:layout_marginTop="-80dp"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/checkmark_icon"
            android:layout_margin="20dp"/>
        <TextView
            android:id="@+id/email_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_sent_info"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/brandon_grotesque_regular_italic"
            android:textAlignment="center"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_sent_info_2"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/brandon_grotesque_regular_italic"
            android:textAlignment="center"
            android:gravity="center" />

        <Button
            android:id="@+id/login_btn"
            android:onClick="callLoginScreen"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/go_tologin_screen"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            />


        </LinearLayout>
</LinearLayout>